--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 .font2 {
     font-style: border;
+    color:#7d0000
 }
 
 .content {
@@ -12,4 +13,25 @@ text-align:  center;
 
 ul {
     text-align: center;
+}
+
+footer {
+    display: flex;
+    justify-content: right;
+    padding: 5px;
+    background-color: #7d0000;
+    color: rgb(0, 0, 0);
+}
+
+header {
+    display: flex;
+    justify-content: left;
+    padding: 5px;
+    background-color: #7d0000;
+    color: rgb(0, 0, 0);
+}
+
+body {
+    background-color: black; 
+    color: rgb(255, 255, 255);
 }
