--- a/style.css
+++ b/style.css
@@ -32,13 +32,12 @@ footer {
 
 header {
     display: flex;
-    justify-content:baseline;
+    justify-content: center;
     padding: 5px;
     background-color: #7d0000;
     color: rgb(0, 0, 0);
     font-family:fantasy;
     letter-spacing: 5px;
-    
 }
 
 body {
@@ -78,10 +77,20 @@ body {
 }
 
 .nav-txt {
-    display:flexbox;
-    justify-content: left;
+    display:flex;
+    justify-content: right;
     padding: 5px;
     color: rgb(0, 0, 0);
     font-family:fantasy;
     letter-spacing: 5px;
+}
+
+.nav-link {
+    display:flex;
+    justify-content: center;
+    padding: 0px 20px;
+    color: rgb(0, 0, 0);
+    font-family:fantasy;
+    letter-spacing: 3px;
+    text-decoration: none;
 }
