--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ footer {
     background-color: #7d0000;
     color: rgb(0, 0, 0);
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    
 }
 
 .footer-container {
@@ -28,14 +29,15 @@ footer {
         margin: 0 auto;
         color: #fff;
         justify-content: space-between;
+        text-decoration: none;
 }
 
 header {
     display: flex;
     justify-content: center;
     padding: 5px;
-    background-color: #7d0000;
-    color: rgb(0, 0, 0);
+    background-color: #000000;
+    color: rgb(255, 255, 255);
     font-family:fantasy;
     letter-spacing: 5px;
 }
@@ -43,6 +45,10 @@ header {
 body {
     background-color: black; 
     color: rgb(255, 255, 255);
+    margin: 0;
+    height: 200vh;
+    font-weight: 100;
+    background: radial-gradient(#4d0000,#000000);
 }
 
 .center {
@@ -89,8 +95,8 @@ body {
     display:flex;
     justify-content: center;
     padding: 0px 20px;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-family:fantasy;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
     text-decoration: none;
 }
