--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body {
     height: 100vh;
     font-weight: 100;
     background: radial-gradient(#4d0000,#000000);
+    flex-direction: column;
 }
 
 .center {
@@ -103,6 +104,13 @@ body {
 
 .main-container {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-wrap:wrap;
+    justify-content:space-between;
+}
+
+.section {
+    width: calc(50% - 20px);
+    padding: 10px;
+    padding-bottom: 35px;
+    border-bottom: 1px solid #672f2f;
 }
